welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:8: error: not found: value vuBiscuit
  if ( vuBiscuit ) {
       ^Program:9: error: type mismatch;
 found   : Unit
 required: Boolean
    return
    ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if ( vuBiscuit ) {
  ^